fixes spacing of arrow and header for iphone and ipad

--- a/src/components/Recruitment/index.scss
+++ b/src/components/Recruitment/index.scss
@@ -69,6 +69,9 @@ button[disabled] {
 .role-name {
   font-weight: bold;
   color: $melon;
+  width: 90%;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 .role-arrow-container {
